--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,14 @@
     "@chakra-ui/core": "^0.5.2",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@urql/exchange-graphcache": "^3.1.10",
     "emotion-theming": "^10.0.27",
     "formik": "^2.2.0",
-    "graphql": "^15.3.0",
+    "graphql": "^15.4.0",
     "next": "^9.1.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "urql": "^1.10.1"
+    "urql": "^1.10.3"
   },
   "license": "MIT",
   "devDependencies": {
