--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,17 @@
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "@urql/exchange-graphcache": "^3.1.10",
+    "add": "^2.0.6",
     "emotion-theming": "^10.0.27",
     "formik": "^2.2.0",
     "graphql": "^15.4.0",
     "next": "^9.1.7",
+    "next-urql": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "urql": "^1.10.3"
+    "react-is": "^17.0.1",
+    "urql": "^1.10.3",
+    "yarn": "^1.22.10"
   },
   "license": "MIT",
   "devDependencies": {
