--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,7 @@
     "watch": "tsc -w",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
-    "dev2": "nodemon --exec ts-node src/index.ts",
-    "create:migration": "mikro-orm migration:create"
+    "dev2": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -29,10 +28,6 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.0.6",
-    "@mikro-orm/core": "^4.0.6",
-    "@mikro-orm/migrations": "^4.0.6",
-    "@mikro-orm/postgresql": "^4.0.6",
     "apollo-server-express": "^2.18.1",
     "argon2": "^0.27.0",
     "class-validator": "^0.12.2",
@@ -47,6 +42,7 @@
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0",
+    "typeorm": "^0.2.29",
     "uuid": "^8.3.1"
   },
   "mikro-orm": {
